# athena-whisper

./: .git-commit-msg.tmp  .gitattributes  .gitignore  AGENTS.md  README.md  athena-dictate.toml  pyproject.toml
.github/workflows/: build.yml
docs/: desktop-dictation-v0.md
src/athena_whisper_topic/: __init__.py  app.py  audio_capture.py  cleanup.py  cli.py  config.py  transcriber.py  types.py  widget.py
src/athena_whisper_topic/inject/: __init__.py  base.py  selection.py  uinput.py  wayland.py  windows.py  x11.py
tests/: test_cleanup.py  test_config.py  test_injector_selection.py  test_transcriber_contract.py
